// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Result /> > renders as expected based on provided props 1`] = `
<div>
  <div
    class="rounded-md text-center p-4 [&]:text-white bg-lm-brand dark:bg-dm-brand"
  />
</div>
`;

exports[`<Result /> > renders as expected based on provided props 2`] = `
<div>
  <div
    class="rounded-md text-center p-2 [&]:text-white bg-lm-brand dark:bg-dm-brand"
  />
</div>
`;

exports[`<Result /> > renders as expected based on provided props 3`] = `
<div>
  <div
    class="rounded-md text-center p-4 [&]:text-white bg-lm-brand dark:bg-dm-brand"
  />
</div>
`;

exports[`<Result /> > renders as expected based on provided props 4`] = `
<div>
  <div
    class="rounded-md text-center p-6 [&]:text-white bg-lm-brand dark:bg-dm-brand"
  />
</div>
`;

exports[`<Result /> > renders as expected based on provided props 5`] = `
<div>
  <div
    class="rounded-md text-center p-4 [&]:text-white bg-lm-brand dark:bg-dm-brand"
  />
</div>
`;

exports[`<Result /> > renders as expected based on provided props 6`] = `
<div>
  <div
    class="rounded-md text-center p-4 [&]:text-white bg-danger"
  />
</div>
`;

exports[`<Result /> > renders as expected based on provided props 7`] = `
<div>
  <div
    class="rounded-md text-center p-4 bg-warning text-black"
  />
</div>
`;
